...
                android:layout_marginLeft="@dimen/page_left_padding"
                android:layout_marginRight="@dimen/page_right_padding"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/Button_getAQuote"
                    style="@style/Style_Button_SquareYellow"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/page_left_padding"
                    android:layout_marginRight="@dimen/page_right_padding"
                    android:text="@string/home_button_request_a_quote" />
            </LinearLayout>
            <!-- ==================================================== -->

            <LinearLayout
                android:id="@+id/LinearLayout_outstandingParent"
                android:layout_width="match_parent"
...
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black" />
                </LinearLayout>

                <TextView
                    android:id="@+id/TextView_requestAccountStatement"
                    style="@style/Style_TextView_body1_accent1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dip"
                    android:layout_marginTop="@dimen/space_between_two_vertical_component"
                    android:clickable="true"
                    android:text="@string/home_label_requestaccuntstatement" />

            </LinearLayout>
            <!-- ======================================================= -->

            <View
                android:id="@+id/divider1"
...
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/page_left_padding"
                    android:layout_weight="1"
                    android:text="@string/home_label_accountupdates" />

                <TextView
                    android:id="@+id/TextView_viewAllAccountUpdates"
                    style="@style/Style_TextView_body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/small_single_arrow"
                    android:text="@string/home_label_viewall" />

                <TextView
                    android:id="@+id/TextView_login"
                    style="@style/Style_TextView_body1_accent1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_login"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_accountUpdatesItemNotFountParent"
                android:layout_width="match_parent"
...
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_accountUpdatesItemsParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="@dimen/page_left_padding"
                android:layout_marginTop="5dip"
                android:orientation="vertical"
...
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/page_left_padding"
                    android:layout_weight="1"
                    android:text="@string/home_label_deals" />

                <TextView
                    android:id="@+id/TextView_viewAllDeals"
                    style="@style/Style_TextView_body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/small_single_arrow"
                    android:text="@string/home_label_viewall" />
            </LinearLayout>
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_smeDealsItemsParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginLeft="@dimen/page_left_padding"
                android:layout_marginTop="5dip"
                android:orientation="vertical"
...
