...
	<string name="please_contact_our_sales_if_you_can_not_see_your_rfq_here">No ongoing Quote requests. You can place one by tapping the button below.</string>
	<string name="order_undelivered_list_empty_message">Looks like you haven\'t placed any orders yet.</string>
	<string name="order_delivered_list_empty_message">No orders found satisfying this criteria</string>
	<string name="empty_meesage_for_account_updates">Looks like you haven\'t done any transactions with us yet.</string>
	<string name="no_result_found">No Result Found.</string>
	<string name="user_delivery_address_message">Save your delivery locations to place your order faster!</string>
	<string name="your_account_statement_will_be_sent_within_48_hours_">Your account statement will be sent within 48 hours.</string>
    <string name="inr">\u20A8</string>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="file_picker_regex_pattern">*/*</string>
	<string name="image_capture_tmp_file_name">tmp.png</string>
    <string name="please_wait">Please wait...</string>
	<string name="contact_us">Contact Us</string>
	<string name="change_password">Change Password</string>
	<string name="auth_dlg_title_email_already_exist">Your email already exist, please login first!</string>
	<string name="auth_dlg_title_session_expired_login_again">Your session has expired, please login again!</string>
	<string name="logout_conformation_dlg_title">Do you want to logout?</string>

	<string name="label_login">LOGIN</string>
...
	<string name="signup_contract_text">By clicking Sign Up, I agree to the <b><u>Terms of Service</u></b> and <b><u>Privacy Policy</u></b>.</string>
	<string name="signup_contract_Terms_of_service_label">Terms of Service</string>
	<string name="signup_contract_Privacy_policy_label">Privacy Policy</string>


	<!-- ADD RFQ SCREEN ======================================================  -->
	<string name="addrfq_button_contactinfo">Contact</string>
	<string name="addrfq_button_itemdetails">Items</string>
	<string name="addrfq_button_deliverydetails">Delivery</string>
	<string name="addrfq_button_previous">" Previous"</string>
	<string name="addrfq_button_next">"Next "</string>
	<string name="addrfq_button_submit">SUBMIT</string>
    <string name="addrfq_label_select_delivery_address">Select Delivery Address:</string>
...
	<string name="p2s_message_type_unauthorize">UNAUTHORIZE</string>
	<string name="p2s_message_type_emailAlreadyExist">EMAIL_ALREADY_EXIST</string>
	<string name="p2s_message_type_serverError">SERVER_ERROR</string>
	<string name="p2s_message_type_networkNotAvailable">NETWORK_NOT_AVAILABLE</string>
	<string name="p2s_message_type_dialogOK">DIALOG_OK</string>
	<string name="p2s_message_type_dialiogOKBack">DIALOG_OK_BACK</string>
	<string name="contactus_page_heading">Your KAM Details</string>

	<!-- App Update Dialog ====================================================== -->
	<string name="updator_dlg_title">App Update Available!</string>
	<string name="updator_dlg_force_message">You must install the latest version in order to continue.</string>
	<string name="updator_dlg_suggest_message">Please install the latest version for a better experience.</string>
	<string name="updator_dlg_pos_btn">UPDATE</string>
...
