...
        android:layout_height="match_parent"
        android:paddingRight="@dimen/page_right_padding"
        android:paddingLeft="@dimen/page_right_padding"
        android:layout_weight="1">

        <TextView
            android:id="@+id/contactUsHeading"
            style="@style/Style_TextView_Subhead1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactus_page_heading"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/page_top_padding"
...
